kubernetes/service.yaml
apiVersion: v1
kind: Service
meta
  name: demo-app-service
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
